deployment/website_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devingunay.com
  labels:
    app: devingunay.com
spec:
  selector:
    matchLabels:
      app: devingunay.com
  template:
    metadata:
      labels:
        app: devingunay.com
    spec:
      volumes:
      # Shared directory for the symfony code to live in
      - name: symfony-code
        emptyDir: {}
      # Map our nginx-config ConfigMap into a volume
      - name: nginx-config
        configMap:
          name: nginx-config
      containers:
      # The container our nginx server is in
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        # let nginx see our symfony app files
        volumeMounts:
          - name: symfony-code
            mountPath: /var/www/
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
        livenessProbe:
          httpGet:
            path: /
            port: 80
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          timeoutSeconds: 1

      # Container with our symfony website and php-fpm
      - name: symfony
        image: devingunay/devingunay.com
        imagePullPolicy: IfNotPresent
        # ports:
        # - containerPort: 9000
        # TODO: does the symfony container need this?
        volumeMounts:
        - mountPath: /var/www
          name: symfony-code
        # Prevents the container from terminating/CrashLoopBackOff
        command:
        - "/bin/sh"
        args: 
        - "-c"
        - "php-fpm"
