deployment/nginx_service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  # selector:
    # app: foo
  ports:
  # Default port used by the image
  - port: 80
